<resources>
    <string name="app_name">FMS 모바일</string>

    <string name="str_error_generic">요청한 작업을 처리할 수 없습니다.</string>

    <string name="str_title_search_company">업체/브랜드 검색</string>
    <string name="str_title_company">업체</string>
    <string name="str_title_allocation">배정</string>
    <string name="str_title_sales">영업</string>
    <string name="str_title_notification">알림</string>
    <string name="str_title_receivable">채권</string>
    <string name="str_title_event">행사</string>
    <string name="str_title_event_detail">행사(상세)</string>
    <string name="str_title_receivable_detail">채권업체(상세)</string>
    <string name="str_title_event_count1">업체수: %s</string>
    <string name="str_title_event_count2">총부스수: %s</string>
    <string name="str_title_event_money">매출액: %s</string>
    <string name="str_title_receivable_all_money">참가비</string>
    <string name="str_title_receivable_money">입금총액</string>
    <string name="str_title_sales_reg">영업활동 등록</string>
    <string name="str_title_assign_list">배정요청 승인/반려</string>
    <string name="str_title_staff_add">담당자 추가</string>

    <!-- notification -->
    <string name="notification_channel_id">notification_channel_id_normal01</string>
    <string name="notification_channel_name">일반</string>
    <string name="notification_channel_description"></string>

    <!-- menu -->
    <string name="action_reg_sales">등록</string>

    <string name="str_assign_tot_cnt">%s %%</string>
    <string name="str_assign_my_cnt">%s %%</string>

    <string name="str_rec_tot_cnt">%s</string>
    <string name="str_rec_my_cnt">%s</string>

    <string name="str_title_preregistration">사전등록</string>
    <string name="str_title_preregistration_detail">사전등록(상세)</string>
    <string name="str_title_annual_visitor_statistics">연별입장객통계</string>
    <string name="str_title_annual_visitor_statistics_detail">연별입장객통계(상세)</string>
    <string name="str_title_visitor_status">입장객현황</string>
    <string name="str_title_visitor_status_detail">입장객현황(상세)</string>

    <string name="str_title_preregistration_count1">전체: %s</string>
    <string name="str_title_preregistration_count2">신규: %s</string>
    <string name="str_title_preregistration_rate">신규율: %s</string>

    <string name="str_update_msg">잠깐!! 업데이트 및 설치가 안될경우 "'앱 삭제'" 후 아래의 링크에서 다운받아 재설치 부탁드립니다.</string>

    <string name="str_menu_title_1">외근등록내역</string>
    <string name="str_menu_title_2">동향보고등록</string>
    <string name="str_menu_title_3">일정등록내역</string>
    <string name="str_menu_title_4">현장인력관리</string>
    <string name="str_menu_title_5">로그아웃</string>
    <string name="str_menu_title_6">명함 관리</string>

    <string name="str_title_name_card_save">명함 등록</string>
    <string name="str_title_name_card_edit">정보 확인</string>
    <string name="str_title_name_card_view">명함 상세</string>
    <string name="str_title_name_card_camera">재촬영</string>
    <string name="str_title_new_company">신규 등록</string>
    <string name="str_title_name_card_search">정보 조회</string>
    <string name="str_title_name_card_company_view">업체 정보 열람</string>

    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>

    <string name="str_title_name_card">담당자 간편 등록</string>
    <string name="str_title_sub_name_card">카메라로 명함을 스캔하여 영업등록까지 기록할 수 있습니다.</string>

</resources>
