<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <LinearLayout
            android:id="@+id/preregistration_list_item_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="8dp">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/preregistration_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textColor="@color/color_030303"
                    android:textSize="18dp"
                    android:textStyle="bold"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="3dp"
                    android:gravity="left|center"
                    android:orientation="horizontal"
                    android:visibility="visible">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="3dp"
                        android:text="기간 :"
                        android:textColor="@color/color_9A9A9A"
                        android:textSize="13dp"
                        android:textStyle="bold"/>

                <TextView
                        android:id="@+id/preregistration_str_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_9A9A9A"
                        android:textSize="13dp"
                        android:textStyle="bold"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:text="~"
                        android:textColor="@color/color_9A9A9A"
                        android:textSize="13dp"
                        android:textStyle="bold"/>

                <TextView
                        android:id="@+id/preregistration_end_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_9A9A9A"
                        android:textSize="13dp"
                        android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:gravity="right"
                    android:orientation="horizontal"
                    android:visibility="visible">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:gravity="right"
                        android:text="사전등록건수"
                        android:textColor="@color/color_9A9A9A"
                        android:textSize="13dp"
                        android:textStyle="bold"/>
                <TextView
                        android:id="@+id/preregistration_count1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:gravity="right"
                        android:text="@string/str_title_preregistration_count1"
                        android:textColor="@color/color_9A9A9A"
                        android:textSize="13dp"
                        android:textStyle="bold"/>

                <TextView
                        android:id="@+id/preregistration_count2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:gravity="right"
                        android:text="@string/str_title_preregistration_count2"
                        android:textColor="@color/color_class_allocation"
                        android:textSize="13dp"
                        android:textStyle="bold"/>

                <TextView
                        android:id="@+id/preregistration_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/str_title_preregistration_rate"
                        android:textColor="@color/color_DC6A7A"
                        android:textSize="13dp"
                        android:textStyle="bold"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:gravity="right"
                        android:text="%"
                        android:textColor="@color/color_DC6A7A"
                        android:textSize="13dp"
                        android:textStyle="bold"/>
            </LinearLayout>

        </LinearLayout>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_next_right"/>

    </LinearLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_gray"/>
</LinearLayout>